# python-project-flask

./: .env.example  .gitignore  Makefile  Procfile  README.md  checklist.md  database.db  pyproject.toml  requirements.txt  setup.cfg  step_10.md  step_20.md  step_30.md  step_40.md  step_50.md  step_60.md  test_db
.github/workflows/: python-ci.yml
alembic/: env.py
alembic/versions/: 4307c25b1ee5_create_urls_table.py  70e233556cb8_create_urls_checks_table.py
page_analyzer/: __init__.py  app.py  config.py  db.py  views.py
page_analyzer/templates/: index.html  layout.html
page_analyzer/templates/errors/: 404.html
page_analyzer/templates/urls/: checks.html  index.html  url.html
tests/: schema.sql  test_app.py
