[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
python-dotenv = "^0.20.0"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.16.1"
pytest = "^7.1.2"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
